# CMakeTests

./: README.md
Ep002/: CMakeLists.txt
Ep002/source/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  Complex.cpp  Complex.h  FractalCreator.cpp  FractalCreator.h  Mandlebrot.cpp  Mandlebrot.h  Particle.cpp  Particle.h  RGB.cpp  RGB.h  Screen.cpp  Screen.h  Swarm.cpp  Swarm.h  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp  ring.h
